@@ -16,6 +16,7 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -103,9 +104,9 @@ public class Util {
     public static Location asLocation(BlockVector3 vec, World world) {
         return new Location(
             world,
-            vec.getBlockX(),
-            vec.getBlockY(),
-            vec.getBlockZ()
+            vec.x(),
+            vec.y(),
+            vec.z()
         );
     }
 
@@ -123,12 +124,12 @@ public class Util {
         return CompletableFuture.supplyAsync(() -> {
 
             try {
-                URL url = new URL("https://api.modrinth.com/v2/project/K9JIhdio");
+                URL url = URI.create("https://api.modrinth.com/v2/project/K9JIhdio").toURL();
                 InputStreamReader reader = new InputStreamReader(url.openStream());
                 JsonArray versions = JsonParser.parseReader(reader).getAsJsonObject().getAsJsonArray("versions");
                 String version = versions.get(versions.size() - 1).getAsString();
 
-                url = new URL("https://api.modrinth.com/v2/version/" + version);
+                url = URI.create("https://api.modrinth.com/v2/version/" + version).toURL();
                 reader = new InputStreamReader(url.openStream());
                 int latestVersion = Integer.parseInt(
                     JsonParser.parseReader(reader)
